feat: landing page new ui

--- a/app/globals.css
+++ b/app/globals.css
@@ -141,6 +141,20 @@ body {
          shadow-md hover:shadow-lg;
   }
 
+  .btn-primarynew {
+    @apply bg-brand-600 text-neutral-900 
+         px-6 py-3  font-semibold 
+         hover:bg-brand-400 active:bg-brand-400 transition-all duration-200
+         shadow-lg hover:shadow-xl hover:shadow-brand-600/25;
+  }
+
+  .btn-secondarynew {
+    @apply bg-transparent text-neutral-300 border border-neutral-300
+         px-6 py-3  font-semibold 
+          hover:border-neutral-200 hover:text-neutral-200 transition-all duration-200
+         shadow-md hover:shadow-lg;
+  }
+
   .accent-trendsage {
     @apply text-[#00D992];
   }
