--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,24 @@
 @font-face {
-  font-family: "Season";
-  src: url("/fonts/SeasonVFTRIALVF.woff2") format("woff2"),
-    url("/fonts/SeasonVFTRIALVF.woff") format("woff"),
-    url("/fonts/SeasonVFTRIALVF.ttf") format("truetype");
-  font-weight: 100 900;
-  font-style: normal;
+  font-family: "seasonVF";
+  src: url("/fonts/SeasonVFTRIALVF.ttf") format("ttf");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "seasonMix";
+  src: url("/fonts/SeasonMixTRIAL-Medium.ttf") format("ttf");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "seasonSansMedium";
+  src: url("/fonts/SeasonSansTRIAL-Medium.ttf") format("ttf");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "seasonSansSemiBold";
+  src: url("/fonts/SeasonSansTRIAL-SemiBold.ttf") format("ttf");
   font-display: swap;
 }
 
@@ -109,13 +123,10 @@
     --sidebar-ring: 152 100% 42.5%; /* TrendSage Green */
   }
 
-  * {
-    @apply font-season;
-  }
   html {
     scroll-behavior: smooth;
-    font-family: "Season", system-ui, -apple-system, BlinkMacSystemFont,
-      "Segoe UI", Roboto, sans-serif;
+    font-family: "seasonVF", "seasonMix", "seasonSansMedium",
+      "seasonSansSemiBold";
   }
   body {
     @apply bg-background text-foreground;
